[package]
name = "snek"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snek"
path = "src/main.rs"

[dependencies]
yeehaw = { path = "../yeehaw/yeehaw", features = ["textbox"] }
rand = "0.8"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
